Fix snprintf usage and, while here, don't trundle off the end of an array. Part of PR 47976 from Henning Petersen.